fixed css style which resulted in constant horizontal scrollbar

--- a/stable/themes/project_vii/style.css
+++ b/stable/themes/project_vii/style.css
@@ -632,8 +632,7 @@ td #admin_menu_anim {
         vertical-align : middle;
 }
 #SUB_MENU {
-        width:100%;
-        padding: 0 20px;
+        padding: 0 0 0 20px;
 }
 
 #SYS_MENU {
